[package]
name = "hutch"
description = "Checkpoint and undo system for AI agent sessions - safe burrow to return to"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["checkpoint", "undo", "agent", "ai", "state"]
categories = ["development-tools", "asynchronous"]

[dependencies]
warhorn = { version = "0.1", path = "../warhorn" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
parking_lot = "0.12"

[dev-dependencies]
tempfile = { workspace = true }
